# fireant

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: cli.c  compiler.c  compiler.h  fireant.h  modules.c  modules.h  runtime.c  runtime.h  std.c  utils.c  utils.h  version.c
